@@ -1,7 +1,10 @@
 package com.calendar.calendar5010;
 
 import com.calendar.calendar5010.controller.AppController;
+
+import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 /**
  * Entry point for launching the Calendar application.
@@ -17,7 +20,8 @@ public class MainApp {
    */
   public static void main(String[] args) throws Exception {
     AppController controller = new AppController();
-    Path dataDir = Path.of("D:\\MastersLearning\\Paradigm\\CalendarTest");
+    Path dataDir = Paths.get(System.getProperty("user.home"), "CalendarTest");
+    Files.createDirectories(dataDir);
     Runtime.getRuntime().addShutdownHook(new Thread(() -> {
       try {
         controller.saveCalendars(dataDir);
